<resources>
    <string name="app_name">HarryPotter
        <string name="app_credits"><font size="15" textAlignment="viewEnd"> - Daria Dimchuk and Eric Zhang</font></string>
    </string>
    <string name="action_settings">Settings</string>

    <string name="title_label">Title:</string>
    <string name="authors_label">Authors:</string>
    <string name="publisher_label">Publisher:</string>
    <string name="publish_date_label">Publish Date:</string>
    <string name="description_label">Description:</string>
    <string name="isbn_label">ISBN:</string>
    <string name="chanage_theme_btn_label">Change App Theme</string>
</resources>
