<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookDetailsScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bookDetailsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BookDetailsActivity">


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:maxLines="2"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025" />


        <ImageView
            android:id="@+id/imgBookCover"
            android:layout_width="@dimen/cover_img_width"
            android:layout_height="@dimen/cover_img_height"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintStart_toStartOf="@+id/txtTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:srcCompat="@drawable/placeholder" />


        <TableLayout
            android:id="@+id/detailsTable"
            android:layout_width="0dp"
            android:layout_height="172dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:stretchColumns="0,1"
            app:layout_constraintBottom_toBottomOf="@+id/imgBookCover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBookCover"
            app:layout_constraintTop_toTopOf="@+id/imgBookCover">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10">

                <TextView
                    android:id="@+id/lblISBN"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="@integer/table_key_layout_weight"
                    android:text="@string/isbn_label" />

                <TextView
                    android:id="@+id/txtISBN"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="@integer/table_value_layout_weight" />
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10">


                <TextView
                    android:id="@+id/lblAuthors"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="@integer/table_key_layout_weight"
                    android:text="@string/authors_label" />

                <TextView
                    android:id="@+id/txtAuthors"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="@integer/table_value_layout_weight" />
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10">

                <TextView
                    android:id="@+id/lblPublisher"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="@integer/table_key_layout_weight"
                    android:text="@string/publisher_label" />


                <TextView
                    android:id="@+id/txtPublisher"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="@integer/table_value_layout_weight" />


            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10">

                <TextView
                    android:id="@+id/lblPublishDate"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="@integer/table_key_layout_weight"
                    android:text="@string/publish_date_label" />


                <TextView
                    android:id="@+id/txtPublishDate"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="@integer/table_value_layout_weight" />
            </TableRow>

        </TableLayout>


        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imgBookCover"
            app:layout_constraintTop_toBottomOf="@+id/imgBookCover"
            app:layout_constraintVertical_bias="0.075" />


        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_15"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_weight="1.0"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"

            app:layout_constraintStart_toStartOf="@+id/lblDescription"
            app:layout_constraintTop_toBottomOf="@+id/lblDescription"
            app:layout_constraintVertical_bias="0.025" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

